@@ -1,0 +1,20 @@
+sudo: false
+language: erlang
+script: "make all"
+
+otp_release:
+   - 18.3
+   - 18.1
+   - 17.4
+   - 17.1
+   - 17.0
+   - R16B03-1
+   - R16B03
+   - R16B02
+   - R16B01
+   - R15B03
+   - R15B02
+
+cache:
+   directories:
+   - .plt
