@@ -1,7 +1,0 @@
-@echo off
-
-setlocal
-
-set rebarscript=%~f0
-
-escript.exe "%rebarscript:.cmd=%" %*
